--- a/app/src/client/scss/application.scss
+++ b/app/src/client/scss/application.scss
@@ -27,3 +27,11 @@ th {
 h1 {
 
 }
+
+.scrollabletextbox {
+    height:100px;
+    width:200px;
+    font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+    font-size: 82%;
+    overflow:scroll;
+}
